--- a/views/login.html
+++ b/views/login.html
@@ -71,6 +71,9 @@
 								</ul>
 							</div>
 							
+							
+							
+							
 							<div class="btn-group">
 								<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
 									DOLLAR
@@ -146,34 +149,34 @@
 	<section id="form"><!--form-->
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4 col-sm-offset-1">
+				<div class="col-sm-4 col-sm-offset-4">
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
-						<form action="#">
-							<input type="text" placeholder="Name" />
-							<input type="email" placeholder="Email Address" />
+						<form class="form-signin" role="form" method="post" action=".">
+							<input type="username" class="form-control" placeholder="Uporabniško ime"
+								   %if username:
+								   value="{{username}}"
+								   %end
+								   name="username"
+								   required autofocus>
+							<input type="password" class="form-control" placeholder="Geslo" name="password" required>
 							<span>
 								<input type="checkbox" class="checkbox"> 
 								Keep me signed in
 							</span>
 							<button type="submit" class="btn btn-default">Login</button>
+							<h5>
+							%if napaka is not None:
+									{{napaka}}
+							%end
+							</h5>							
+							New user? Register <a href=/register/>here</a>
+
 						</form>
 					</div><!--/login form-->
 				</div>
-				<div class="col-sm-1">
-					<h2 class="or">OR</h2>
-				</div>
-				<div class="col-sm-4">
-					<div class="signup-form"><!--sign up form-->
-						<h2>New User Signup!</h2>
-						<form action="#">
-							<input type="text" placeholder="Name"/>
-							<input type="email" placeholder="Email Address"/>
-							<input type="password" placeholder="Password"/>
-							<button type="submit" class="btn btn-default">Signup</button>
-						</form>
-					</div><!--/sign up form-->
-				</div>
+				
+				
 			</div>
 		</div>
 	</section><!--/form-->
