Večji update, usposobil html template z bottle, ustvaril databazo na phppg, vzpostavil registracijo/login in povezal bottle z bazo

--- a/views/register.html
+++ b/views/register.html
@@ -57,7 +57,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="index.html"><img src="/static/images/home/logo.png" alt="" /></a>
+							<a href="/shop/"><img src="/static/images/home/logo.png" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 							<div class="btn-group">
@@ -89,11 +89,18 @@
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href=""><i class="fa fa-user"></i> Account</a></li>
+								%if logged is not None:
+								<li><a href=""><i class="fa fa-user"></i> {{logged}}</a></li>
 								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
 								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a href="/login/" class="active"><i class="fa fa-lock"></i> Login</a></li>
+								%end
+								%if logged is None:
+									<li><a href="/login/"><i class="fa fa-lock"></i>Login</a></li>
+								
+								%else:
+									<li><a href="/logout/"><i class="fa fa-lock"></i>Logout</a></li>
+								%end
 							</ul>
 						</div>
 					</div>
@@ -115,7 +122,7 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.html">Home</a></li>
+								<li><a href="/shop/">Home</a></li>
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="shop.html">Products</a></li>
@@ -154,22 +161,22 @@
 					<div class="signup-form"><!--sign up form-->
 						<h2>New User Signup!</h2>
 						<form class="form-signin" role="form" method="post" action=".">
-							<!--<input type="email" placeholder="Email Address"/>-->
-							<input type="username" class="form-control" placeholder="Uporabniško ime"
+							<input type="email" class="form-control" placeholder="Email Address" name="priimek" required>
+							<input type="username" class="form-control" placeholder="Username"
 							   %if username:
 							   value="{{username}}"
 							   %end
 							   name="username"
 							   required autofocus>
-						    <input type="username" class="form-control" placeholder="Ime"
+						    <input type="username" class="form-control" placeholder="Given Name"
 							   %if ime:
 							   value="{{ime}}"
 							   %end
 							   name="ime"
 							   required>
-							<input type="username" class="form-control" placeholder="Priimek" name="priimek" required>
-							<input type="password" class="form-control" placeholder="Geslo" name="password1" required>
-							<input type="password" class="form-control" placeholder="Geslo" name="password2" required>
+							<input type="username" class="form-control" placeholder="Surname" name="priimek" required>
+							<input type="password" class="form-control" placeholder="Password" name="password1" required>
+							<input type="password" class="form-control" placeholder="Repeat password" name="password2" required>
 							<button type="submit" class="btn btn-default">Signup</button>
 							<h3>
 							%if napaka is not None:
