--- a/views/register.html
+++ b/views/register.html
@@ -90,8 +90,8 @@
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
 								%if logged is not None:
-								<li><a href=""><i class="fa fa-user"></i> {{logged}}</a></li>
-								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
+								<li><a href="/account/"><i class="fa fa-user"></i> {{logged}}</a></li>
+								<li><a href=""><i class="fa fa-star"></i> Your balance: {{stanje}}€</a></li>
 								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 								%end
