--- a/views/checkout.html
+++ b/views/checkout.html
@@ -86,11 +86,18 @@
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href=""><i class="fa fa-user"></i> Account</a></li>
-								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-								<li><a href="checkout.html" class="active"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								%if logged is not None:
+								<li><a href="/account/"><i class="fa fa-user"></i> {{logged}}</a></li>
+								<li><a href=""><i class="fa fa-star"></i> Your balance: {{stanje}}€</a></li>
+								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
+								%end
+								%if logged is None:
+									<li><a href="/login/"><i class="fa fa-lock"></i>Login</a></li>
+								
+								%else:
+									<li><a href="/logout/"><i class="fa fa-lock"></i>Logout</a></li>
+								%end
 							</ul>
 						</div>
 					</div>
