--- a/views/register.html
+++ b/views/register.html
@@ -161,7 +161,7 @@
 					<div class="signup-form"><!--sign up form-->
 						<h2>New User Signup!</h2>
 						<form class="form-signin" role="form" method="post" action=".">
-							<input type="email" class="form-control" placeholder="Email Address" name="priimek" required>
+							<input type="email" class="form-control" placeholder="Email Address" name="email" required>
 							<input type="username" class="form-control" placeholder="Username"
 							   %if username:
 							   value="{{username}}"
