--- a/views/product-details.html
+++ b/views/product-details.html
@@ -89,7 +89,7 @@
 								%if logged is not None:
 								<li><a href="/account/"><i class="fa fa-user"></i> {{logged}}</a></li>
 								<li><a href=""><i class="fa fa-star"></i> Your balance: {{stanje}}€</a></li>
-								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								<li><a href="/new/"><i class="fa fa-crosshairs"></i>Sell Items</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 								%end
 								%if logged is None:
