v večji meri končana item upload stran, naslednjič dodam še upload slike in objavo predmeta na databazo

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1895,7 +1895,7 @@ h2.title {
 
 .form-two, .form-one {
   float: left;
-  width: 47%
+  width: 91%;
 }
 
 
@@ -1916,7 +1916,7 @@ h2.title {
 }
 
 .form-two {
-  margin-left: 5%
+  margin-left: 0%;
 }
 
 
