--- a/views/new.html
+++ b/views/new.html
@@ -160,6 +160,12 @@
 			</div><!--/breadcrums-->
 
 			<div class="shopper-informations">
+				%if napaka:
+				<div class="row">
+					<h3>{{napaka}}<h3>
+				<div>
+				%end
+				
 				<div class="row">
 					
 					<div class="col-sm-5">
@@ -167,9 +173,9 @@
 							<p>Select the category of your item:</p>
 							<div class="form-two">
 								
-									
+									<form method=GET name='form1'>
 									%for nivo in range(len(seznam)):
-											<form method=GET name='form{{nivo}}'>
+											
 												<select onchange="this.form.submit()" name={{nivo}}>
 														<option disabled selected value
 															%if query[str(nivo)] == 'dummy':
@@ -229,7 +235,7 @@
 							%if attrib == 1:
 							
 								<div class="col-sm-12z shopper-info">
-									<form method=GET name='form{{nivo}}'>
+									<form method=POST>
 									<p>Title</p>
 									<input name="itemname" placeholder="Enter a name for your item">
 									%if seznam_atributov:
@@ -249,6 +255,10 @@
 												%else:
 													NE POZNAM TIPA, ADMIN POPRAVI
 												%end
+												%if values[i]!='':
+												    value="{{values[i]}}"
+												%end
+												
 											
 												
 												
@@ -266,6 +276,10 @@
 										<textarea name="message"  placeholder="Enter a description for your item" rows="16"></textarea>
 										
 									</div>
+									<div>
+										<input type="file" name="upload" />
+									</div>
+										<button type="submit" class="btn btn-default">Submit Item</button>
 									<form>
 								</div>
 							%end
