Item upload page zdaj dela v celoti (upam)

--- a/views/loginOLD.html
+++ b/views/loginOLD.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.ico">
+	<script src="/static/js/jquery.js"></script>
 
     <title>Fakebook prijava</title>
 
@@ -28,26 +29,7 @@
 
   <body>
 
-    <div class="container">
-      <form class="form-signin" role="form" method="post" action=".">
-        <h2 class="form-signin-heading">Fakebook</h2>
-        %if napaka:
-        <div class="alert alert-warning">{{napaka}}</div>
-        %end
-        <input type="username" class="form-control" placeholder="Uporabniško ime"
-               %if username:
-               value="{{username}}"
-               %end
-               name="username"
-               required autofocus>
-        <input type="password" class="form-control" placeholder="Geslo" name="password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Prijava</button>
-        <div>
-          <a href="/register/">Registracija</a>
-        </div>
-      </form>
-    </div> <!-- /container -->
-
+    <input type="file">
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
