priprava na sortiranje in display predmetov

--- a/views/shop.html
+++ b/views/shop.html
@@ -152,11 +152,13 @@
 			</div>
 	</header>
 	
+	<!--
 	<section id="advertisement">
 		<div class="container">
 			<img src="/static/images/shop/advertisement.jpg" alt="" />
 		</div>
 	</section>
+	-->
 	
 	<section>
 		<div class="container">
@@ -356,6 +358,7 @@
 								</div>
 							</div>
 						</div>
+						
 						<div class="col-sm-4">
 							<div class="product-image-wrapper">
 								<div class="single-products">
@@ -616,13 +619,15 @@
 							</div>
 						</div>
 						
+					</div><!--features_items-->
+					<div class='row'>
 						<ul class="pagination">
 							<li class="active"><a href="">1</a></li>
 							<li><a href="">2</a></li>
 							<li><a href="">3</a></li>
 							<li><a href="">&raquo;</a></li>
 						</ul>
-					</div><!--features_items-->
+					</div>
 				</div>
 			</div>
 		</div>
