--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1900,16 +1900,28 @@ h2.title {
 
 
 .shopper-info > form > input, 
+.shopper-info > input, 
 .form-two > form > select, 
 .form-two > form > input, 
 .form-one > form > input {
-  background:#F0F0E9;
+  background: #f0f0e9;
   border: 0 none;
   margin-bottom:10px;
   padding: 10px;
   width: 100%;
-  font-weight: 300
+  font-weight: 300;
 }
+
+.shopper-info > input{
+  background: #f0f0e9;
+  border: 0 none;
+  margin-bottom:10px;
+  padding: 5px;
+  width: 100%;
+  font-weight: 300;
+}
+
+
 
 .form-two > form > select {
   padding:10px 5px
